# SindhiNLTK

./: CHANGELOG.md  LICENSE  README.md  UPGRADE_GUIDE.md  USAGE.md  pyproject.toml
sindhinltk/: __init__.py  datasets.py  normalizer.py  sentiment.py  stemmer.py  stopwords.py  tokenizer.py
sindhinltk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sindhinltk/data/: sentiment_lexicon.json  stopwords_expanded.json
