[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sindhinltk"
version = "1.3.0"
description = "Sindhi Natural Language Toolkit — tokenizer, stemmer, stopwords, sentiment, normalizer"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Aakash Meghwar", email = "aakashmeghwar01@gmail.com" }
]
keywords = ["sindhi", "nlp", "tokenizer", "stemmer", "sentiment", "arabic-script", "low-resource"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Natural Language :: Sindhi",
  "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = []   # zero hard deps — pure Python

[project.optional-dependencies]
hf = ["transformers>=4.30"]   # only if you want HF-based tokenizer backend

[project.urls]
Homepage   = "https://github.com/AakashKumarMissrani/SindhiNLTK"
Repository = "https://github.com/AakashKumarMissrani/SindhiNLTK"
Issues     = "https://github.com/AakashKumarMissrani/SindhiNLTK/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sindhinltk = ["data/*.json"]
