[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sindhinltk"
version = "1.3.1"
description = "Sindhi Natural Language Toolkit — tokenizer, stemmer, stopwords, sentiment, normalizer"
license = "MIT"
authors = [
  { name = "Aakash Meghwar", email = "aakashmeghwar01@gmail.com" }
]
keywords = ["sindhi", "nlp", "tokenizer", "stemmer", "sentiment", "arabic-script", "low-resource"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Linguistic",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage   = "https://github.com/AakashKumarMissrani/SindhiNLTK"
Repository = "https://github.com/AakashKumarMissrani/SindhiNLTK"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sindhinltk = ["data/*.json"]
